# SmartReco

./: README.md
data/: README.md  data.csv  read-only-reentrancy.xlsx
smartReco_dynamic_analysis/: .gitignore  .gitmodules  Cargo.toml  README.md
smartReco_dynamic_analysis/cli/: .gitignore  Cargo.toml
smartReco_dynamic_analysis/cli/src/: evm.rs  main.rs  replay.rs
smartReco_dynamic_analysis/proxy/: main.py
smartReco_dynamic_analysis/revm/crates/interpreter/src/: host.rs  instruction_result.rs  instructions.rs  interpreter.rs
smartReco_dynamic_analysis/revm/crates/interpreter/src/host/: dummy_host.rs
smartReco_dynamic_analysis/revm/crates/interpreter/src/instructions/: arithmetic.rs  bitwise.rs  control.rs  host.rs  host_env.rs  memory.rs  stack.rs  system.rs
smartReco_dynamic_analysis/revm/crates/interpreter/src/interpreter/: contract.rs  memory.rs  stack.rs
smartReco_dynamic_analysis/revm/crates/revm/src/: evm_impl.rs
smartReco_dynamic_analysis/src/: cache.rs  const.rs  dapp_utils.rs  executor.rs  input.rs  lib.rs  state.rs  state_input.rs
smartReco_dynamic_analysis/src/evm/: abi.rs  config.rs  contract_utils.rs  corpus_initializer.rs  host.rs  input.rs  mod.rs  types.rs  vm.rs
smartReco_dynamic_analysis/src/evm/middlewares/: middleware.rs
smartReco_dynamic_analysis/src/evm/onchain/: abi_decompiler.rs  endpoints.rs  mod.rs  onchain.rs
smartReco_dynamic_analysis/src/evm/replay/: mod.rs  replay_corpus_initializer.rs  replay_host.rs  replay_record.rs  replay_vm.rs
smartReco_dynamic_analysis/src/fuzzers/: evm_fuzzer.rs  mod.rs  revm_fuzzer.rs
smartReco_dynamic_analysis/src/generic_vm/: vm_executor.rs  vm_state.rs
smartReco_static_analysis/: .gitignore  README.md  requirements
smartReco_static_analysis/code/: analysis_slither.py  collect_dapp_information.py  execute_with_transaction.py  generate_tx_with_abi.py  smartReco.py
smartReco_static_analysis/code/lib/: __init__.py  generate.py  globl_variables.py  onchain_tool.py  util.py
