[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
service = []
[dependencies]
smartReco = {path = "../", version = "0.1.0"}
revm = { path = "../revm/crates/revm", features = ["no_gas_measuring", "serde"] }
revm-primitives = { path = "../revm/crates/primitives", features = ["no_gas_measuring", "serde"] }
revm-interpreter = { path = "../revm/crates/interpreter", features = ["no_gas_measuring", "serde"] }
clap = {version = "4.0.18", features = ["derive"]}
primitive-types = { version = "0.12.1", features = ["rlp", "serde"] }
sentry = "0.29.1"
serde_json = "1.0.73"
serde = "1.0.147"
hex = "0.4"
